--- a/refereezy-website/frontend/pages/jugadores.html
+++ b/refereezy-website/frontend/pages/jugadores.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestión de Jugadores - Refereezy</title>
-    <link rel="stylesheet" href="jugadores.css">
+    <link rel="stylesheet" href="../style/jugadores.css">
 </head>
 <body>
     <div class="min-h-screen">
@@ -19,12 +19,12 @@
                     
                     <!-- Navigation Links -->
                     <div class="nav-links">
-                        <a href="../inicio/index.html" class="nav-item">Inicio<span class="separator"></span></a>
-                        <a href="../equipos/equipos.html" class="nav-item">Equipos<span class="separator"></span></a>
+                        <a href="../index.html" class="nav-item">Inicio<span class="separator"></span></a>
+                        <a href="equipos.html" class="nav-item">Equipos<span class="separator"></span></a>
                         <a href="jugadores.html" class="nav-item">Jugadores<span class="separator"></span></a>
-                        <a href="../arbitros/arbitros.html" class="nav-item">Arbitros<span class="separator"></span></a>
-                        <a href="../partidos/partidos.html" class="nav-item">Partidos<span class="separator"></span></a>
-                        <a href="../planes/planes.html" class="nav-item">Planes</a>
+                        <a href="arbitros.html" class="nav-item">Arbitros<span class="separator"></span></a>
+                        <a href="partidos.html" class="nav-item">Partidos<span class="separator"></span></a>
+                        <a href="planes.html" class="nav-item">Planes</a>
                         <button class="login-button">Iniciar sesion</button>
                     </div>
                 </div>
@@ -57,6 +57,6 @@
             </div>
         </main>
     </div>
-    <script src="jugadores.js"></script>
+    <script src="../js/jugadores.js"></script>
 </body>
 </html>
