--- a/refereezy-website/frontend/pages/partidos.html
+++ b/refereezy-website/frontend/pages/partidos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestión de Partidos - RefereeZY</title>
-    <link rel="stylesheet" href="partidos.css">
+    <link rel="stylesheet" href="../style/partidos.css">
 </head>
 <body>
     <div class="min-h-screen">
@@ -19,10 +19,10 @@
                     
                     <!-- Navigation Links -->
                     <div class="nav-links">
-                        <a href="../inicio/index.html" class="nav-item">Inicio<span class="separator"></span></a>
-                        <a href="../equipos/equipos.html" class="nav-item">Equipos<span class="separator"></span></a>
-                        <a href="../jugadores/jugadores.html" class="nav-item">Jugadores<span class="separator"></span></a>
-                        <a href="../arbitros/arbitros.html" class="nav-item">Arbitros<span class="separator"></span></a>
+                        <a href="../index.html" class="nav-item">Inicio<span class="separator"></span></a>
+                        <a href="equipos.html" class="nav-item">Equipos<span class="separator"></span></a>
+                        <a href="jugadores.html" class="nav-item">Jugadores<span class="separator"></span></a>
+                        <a href="arbitros.html" class="nav-item">Arbitros<span class="separator"></span></a>
                         <a href="partidos.html" class="nav-item">Partidos<span class="separator"></span></a>
                         <a href="../planes/planes.html" class="nav-item">Planes</a>
                         <button class="login-button">Iniciar sesion</button>
@@ -67,6 +67,6 @@
             </div>
         </main>
     </div>
-    <script src="partidos.js"></script>
+    <script src="../js/partidos.js"></script>
 </body>
 </html>
