--- a/refereezy-website/frontend/pages/nav.html
+++ b/refereezy-website/frontend/pages/nav.html
@@ -5,12 +5,12 @@
                 <img src="../assets/logo.png" alt="RefereeZY" class="logo">
             </div>
             <div class="nav-links">
-                <a href="../inicio/index.html" class="nav-item">Inicio<span class="separator"></span></a>
-                <a href="../equipos/equipos.html" class="nav-item">Equipos<span class="separator"></span></a>
-                <a href="../jugadores/jugadores.html" class="nav-item">Jugadores<span class="separator"></span></a>
-                <a href="../arbitros/arbitros.html" class="nav-item">Árbitros<span class="separator"></span></a>
-                <a href="../partidos/partidos.html" class="nav-item">Partidos<span class="separator"></span></a>
-                <a href="../planes/planes.html" class="nav-item">Planes</a>
+                <a href="../index.html" class="nav-item">Inicio<span class="separator"></span></a>
+                <a href="equipos.html" class="nav-item">Equipos<span class="separator"></span></a>
+                <a href="jugadores.html" class="nav-item">Jugadores<span class="separator"></span></a>
+                <a href="arbitros.html" class="nav-item">Árbitros<span class="separator"></span></a>
+                <a href="partidos.html" class="nav-item">Partidos<span class="separator"></span></a>
+                <a href="planes.html" class="nav-item">Planes</a>
             </div>
             <button class="login-button">Iniciar sesión</button>
         </div>
