add style to index.html

--- a/refereezy-website/index.html
+++ b/refereezy-website/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Refereezy - Digital Sport</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../style/styles.css">
 </head>
 <body>
     <div class="min-h-screen">
@@ -20,11 +20,11 @@
                     <!-- Navigation Links -->
                     <div class="nav-links">
                         <a href="index.html" class="nav-item">Inicio<span class="separator"></span></a>
-                        <a href="../equipos/equipos.html" class="nav-item">Equipos<span class="separator"></span></a>
-                        <a href="../jugadores/jugadores.html" class="nav-item">Jugadores<span class="separator"></span></a>
-                        <a href="../arbitros/arbitros.html" class="nav-item">Arbitros<span class="separator"></span></a>
-                        <a href="../partidos/partidos.html" class="nav-item">Partidos<span class="separator"></span></a>
-                        <a href="../planes/planes.html" class="nav-item">Planes</a>
+                        <a href="frontend/pages/equipos.html" class="nav-item">Equipos<span class="separator"></span></a>
+                        <a href="frontend/pages/jugadores.html" class="nav-item">Jugadores<span class="separator"></span></a>
+                        <a href="frontend/pages/arbitros.html" class="nav-item">Arbitros<span class="separator"></span></a>
+                        <a href=".frontend/pages/partidos.html" class="nav-item">Partidos<span class="separator"></span></a>
+                        <a href="frontend/pages/planes.html" class="nav-item">Planes</a>
                         <button class="login-button" onclick="window.location.href='../login/login.html'">Iniciar sesión</button>
                     </div>
                 </div>
@@ -48,6 +48,6 @@
             </div>
         </main>
     </div>
-    <script src="script.js"></script>
+    <script src="frontend/js/script.js"></script>
 </body>
 </html>
