--- a/refereezy-website/frontend/pages/nav.html
+++ b/refereezy-website/frontend/pages/nav.html
@@ -5,7 +5,7 @@
                 <img src="../assets/logo.png" alt="RefereeZY" class="logo">
             </div>
             <div class="nav-links">
-                <a href="../index.html" class="nav-item">Inicio<span class="separator"></span></a>
+                <a href="../../index.html" class="nav-item">Inicio<span class="separator"></span></a>
                 <a href="equipos.html" class="nav-item">Equipos<span class="separator"></span></a>
                 <a href="jugadores.html" class="nav-item">Jugadores<span class="separator"></span></a>
                 <a href="arbitros.html" class="nav-item">Árbitros<span class="separator"></span></a>
