--- a/refereezy-website/frontend/pages/partidos.html
+++ b/refereezy-website/frontend/pages/partidos.html
@@ -19,12 +19,12 @@
                     
                     <!-- Navigation Links -->
                     <div class="nav-links">
-                        <a href="../index.html" class="nav-item">Inicio<span class="separator"></span></a>
+                        <a href="../../index.html" class="nav-item">Inicio<span class="separator"></span></a>
                         <a href="equipos.html" class="nav-item">Equipos<span class="separator"></span></a>
                         <a href="jugadores.html" class="nav-item">Jugadores<span class="separator"></span></a>
                         <a href="arbitros.html" class="nav-item">Arbitros<span class="separator"></span></a>
                         <a href="partidos.html" class="nav-item">Partidos<span class="separator"></span></a>
-                        <a href="../planes/planes.html" class="nav-item">Planes</a>
+                        <a href="planes.html" class="nav-item">Planes</a>
                         <button class="login-button">Iniciar sesion</button>
                     </div>
                 </div>
