--- a/refereezy-website/frontend/pages/ver-partidos.html
+++ b/refereezy-website/frontend/pages/ver-partidos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Partidos - RefereeZY</title>
-    <link rel="stylesheet" href="ver-partidos.css">
+    <link rel="stylesheet" href="../style/ver-partidos.css">
 </head>
 <body>
     <div class="min-h-screen">
@@ -16,27 +16,27 @@
                         <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/imagen_2025-01-30_202931687-removebg-preview-w4t8ZB79AlGh5VocbZvtb2mOVMtpQi.png" alt="RefereeZY Logo" class="logo">
                     </div>
                     <div class="nav-links">
-                        <a href="../inicio/index.html" class="nav-item">
+                        <a href="../../index.html" class="nav-item">
                             Inicio
                             <span class="separator"></span>
                         </a>
-                        <a href="../equipos/equipos.html" class="nav-item">
+                        <a href="equipos.html" class="nav-item">
                             Equipos
                             <span class="separator"></span>
                         </a>
-                        <a href="../jugadores/jugadores.html" class="nav-item">
+                        <a href="jugadores.html" class="nav-item">
                             Jugadores
                             <span class="separator"></span>
                         </a>
-                        <a href="../arbitros/arbitros.html" class="nav-item">
+                        <a href="arbitros.html" class="nav-item">
                             Árbitros
                             <span class="separator"></span>
                         </a>
-                        <a href="../partidos/partidos.html" class="nav-item">
+                        <a href="partidos.html" class="nav-item">
                             Partidos
                             <span class="separator"></span>
                         </a>
-                        <a href="../planes/planes.html" class="nav-item">
+                        <a href="planes.html" class="nav-item">
                             Planes
                         </a>
                         <button class="login-button">Iniciar sesión</button>
@@ -58,6 +58,6 @@
             </div>
         </main>
     </div>
-    <script src="ver-partidos.js"></script>
+    <script src="../style/ver-partidos.js"></script>
 </body>
 </html>
