--- a/refereezy-website/frontend/pages/jugadores.html
+++ b/refereezy-website/frontend/pages/jugadores.html
@@ -19,7 +19,7 @@
                     
                     <!-- Navigation Links -->
                     <div class="nav-links">
-                        <a href="../index.html" class="nav-item">Inicio<span class="separator"></span></a>
+                        <a href="../../index.html" class="nav-item">Inicio<span class="separator"></span></a>
                         <a href="equipos.html" class="nav-item">Equipos<span class="separator"></span></a>
                         <a href="jugadores.html" class="nav-item">Jugadores<span class="separator"></span></a>
                         <a href="arbitros.html" class="nav-item">Arbitros<span class="separator"></span></a>
