--- a/refereezy-website/frontend/pages/login.html
+++ b/refereezy-website/frontend/pages/login.html
@@ -16,7 +16,7 @@
                         <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/imagen_2025-01-30_202931687-removebg-preview-w4t8ZB79AlGh5VocbZvtb2mOVMtpQi.png" alt="RefereeZY Logo" class="logo">
                     </div>
                     <div class="nav-links">
-                        <a href="../index.html" class="nav-item">
+                        <a href="../../index.html" class="nav-item">
                             Inicio
                             <span class="separator"></span>
                         </a>
