--- a/refereezy-website/frontend/pages/planes.html
+++ b/refereezy-website/frontend/pages/planes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Planes - RefereeZY</title>
-    <link rel="stylesheet" href="planes.css">
+    <link rel="stylesheet" href="../style/planes.css">
 </head>
 <body>
     <div class="min-h-screen">
@@ -19,12 +19,12 @@
                     
                     <!-- Navigation Links -->
                     <div class="nav-links">
-                        <a href="../inicio/index.html" class="nav-item">Inicio<span class="separator"></span></a>
-                        <a href="../equipos/equipos.html" class="nav-item">Equipos<span class="separator"></span></a>
-                        <a href="../jugadores/jugadores.html" class="nav-item">Jugadores<span class="separator"></span></a>
-                        <a href="../arbitros/arbitros.html" class="nav-item">Arbitros<span class="separator"></span></a>
-                        <a href="../partidos/partidos.html" class="nav-item">Partidos<span class="separator"></span></a>
-                        <a href="../planes/planes.html" class="nav-item">Planes</a>
+                        <a href="../../index.html" class="nav-item">Inicio<span class="separator"></span></a>
+                        <a href="equipos.html" class="nav-item">Equipos<span class="separator"></span></a>
+                        <a href="jugadores.html" class="nav-item">Jugadores<span class="separator"></span></a>
+                        <a href="arbitros.html" class="nav-item">Arbitros<span class="separator"></span></a>
+                        <a href="partidos.html" class="nav-item">Partidos<span class="separator"></span></a>
+                        <a href="planes.html" class="nav-item">Planes</a>
                         <button class="login-button">Iniciar sesion</button>
                     </div>
                 </div>
@@ -78,7 +78,7 @@
 
                         <!-- Botón Crear Partido -->
                         <div class="action-button">
-                            <a href="../partidos/partidos.html" class="create-match-btn">Comprar</a>
+                            <a href="partidos.html" class="create-match-btn">Comprar</a>
                         </div>
                     </div>
                 </div>
