--- a/refereezy-website/frontend/pages/ver-jugadores.html
+++ b/refereezy-website/frontend/pages/ver-jugadores.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Jugadores - RefereeZY</title>
-    <link rel="stylesheet" href="jugadores.css">
-    <link rel="stylesheet" href="ver-jugadores.css">
+    <link rel="stylesheet" href="../style/jugadores.css">
+    <link rel="stylesheet" href="../style/ver-jugadores.css">
 </head>
 <body>
     <div class="min-h-screen">
@@ -20,12 +20,12 @@
                     
                     <!-- Navigation Links -->
                     <div class="nav-links">
-                        <a href="../inicio/index.html" class="nav-item">Inicio<span class="separator"></span></a>
-                        <a href="../equipos/equipos.html" class="nav-item">Equipos<span class="separator"></span></a>
+                        <a href="../../index.html" class="nav-item">Inicio<span class="separator"></span></a>
+                        <a href="equipos.html" class="nav-item">Equipos<span class="separator"></span></a>
                         <a href="jugadores.html" class="nav-item">Jugadores<span class="separator"></span></a>
-                        <a href="../arbitros/arbitros.html" class="nav-item">Arbitros<span class="separator"></span></a>
-                        <a href="../partidos/partidos.html" class="nav-item">Partidos<span class="separator"></span></a>
-                        <a href="../planes/planes.html" class="nav-item">Planes</a>
+                        <a href="arbitros.html" class="nav-item">Arbitros<span class="separator"></span></a>
+                        <a href="partidos.html" class="nav-item">Partidos<span class="separator"></span></a>
+                        <a href="planes.html" class="nav-item">Planes</a>
                         <button class="login-button">Iniciar sesion</button>
                     </div>
                 </div>
@@ -53,6 +53,6 @@
             </div>
         </main>
     </div>
-    <script src="ver-jugadores.js"></script>
+    <script src="../js/ver-jugadores.js"></script>
 </body>
 </html>
