--- a/refereezy-website/index.html
+++ b/refereezy-website/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Refereezy - Digital Sport</title>
-    <link rel="stylesheet" href="../style/styles.css">
+    <link rel="stylesheet" href="frontend/style/styles.css">
 </head>
 <body>
     <div class="min-h-screen">
@@ -19,13 +19,13 @@
                     
                     <!-- Navigation Links -->
                     <div class="nav-links">
-                        <a href="index.html" class="nav-item">Inicio<span class="separator"></span></a>
-                        <a href="frontend/pages/equipos.html" class="nav-item">Equipos<span class="separator"></span></a>
+                        <a href="index.html" class="nav a nav-item">Inicio<span class="separator"></span></a>
+                        <a href="frontend/pages/equipos.html" class="nav a nav-item">Equipos<span class="separator"></span></a>
                         <a href="frontend/pages/jugadores.html" class="nav-item">Jugadores<span class="separator"></span></a>
                         <a href="frontend/pages/arbitros.html" class="nav-item">Arbitros<span class="separator"></span></a>
-                        <a href=".frontend/pages/partidos.html" class="nav-item">Partidos<span class="separator"></span></a>
+                        <a href="frontend/pages/partidos.html" class="nav-item">Partidos<span class="separator"></span></a>
                         <a href="frontend/pages/planes.html" class="nav-item">Planes</a>
-                        <button class="login-button" onclick="window.location.href='../login/login.html'">Iniciar sesión</button>
+                        <button class="login-button" onclick="window.location.href='fronten/pages/login.html'">Iniciar sesión</button>
                     </div>
                 </div>
             </div>
