--- a/refereezy-website/index.html
+++ b/refereezy-website/index.html
@@ -19,13 +19,13 @@
                     
                     <!-- Navigation Links -->
                     <div class="nav-links">
-                        <a href="index.html" class="nav a nav-item">Inicio<span class="separator"></span></a>
-                        <a href="frontend/pages/equipos.html" class="nav a nav-item">Equipos<span class="separator"></span></a>
-                        <a href="frontend/pages/jugadores.html" class="nav-item">Jugadores<span class="separator"></span></a>
-                        <a href="frontend/pages/arbitros.html" class="nav-item">Arbitros<span class="separator"></span></a>
-                        <a href="frontend/pages/partidos.html" class="nav-item">Partidos<span class="separator"></span></a>
-                        <a href="frontend/pages/planes.html" class="nav-item">Planes</a>
-                        <button class="login-button" onclick="window.location.href='fronten/pages/login.html'">Iniciar sesión</button>
+                        <a id="inicio" href="index.html" class="nav-item">Inicio<span class="separator"></span></a>
+                        <a id="equipos" href="frontend/pages/equipos.html" class="nav-item">Equipos<span class="separator"></span></a>
+                        <a id="jugadores" href="frontend/pages/jugadores.html" class="nav-item">Jugadores<span class="separator"></span></a>
+                        <a id="arbitros" href="frontend/pages/arbitros.html" class="nav-item">Arbitros<span class="separator"></span></a>
+                        <a id="partidos" href="frontend/pages/partidos.html" class="nav-item">Partidos<span class="separator"></span></a>
+                        <a id="planes" href="frontend/pages/planes.html" class="nav-item">Planes</a>
+                        <button class="login-button" onclick="window.location.href='frontend/pages/login.html'">Iniciar sesión</button>
                     </div>
                 </div>
             </div>
