--- a/refereezy-website/frontend/pages/ver-partidos.html
+++ b/refereezy-website/frontend/pages/ver-partidos.html
@@ -58,6 +58,6 @@
             </div>
         </main>
     </div>
-    <script src="../style/ver-partidos.js"></script>
+    <script src="../js/ver-partidos.js"></script>
 </body>
 </html>
