--- a/backup_web/frontend/pages/equipos.html
+++ b/backup_web/frontend/pages/equipos.html
@@ -44,15 +44,14 @@
                     <div class="form-container">
                         <div class="input-group">
                             <input type="text" placeholder="Nombre del equipo" class="team-name-input">
-                            <input type="color" placeholder="Color primario (ej. #FF0000)" class="primary-color-input">
-                            <input type="color" placeholder="Color secundario (ej. #0000FF)" class="secondary-color-input">
+                            <input type="text" placeholder="Color primario (ej. #FF0000)" class="primary-color-input">
+                            <input type="text" placeholder="Color secundario (ej. #0000FF)" class="secondary-color-input">
                             <input type="number" placeholder="ID del cliente" class="client-id-input">
                         </div>
 
                         <div class="logo-section">
                             <div class="logo-input-container">
                                 <button class="logo-upload-btn">Añadir logo del equipo</button>
-                                <button class="remove-logo-btn">Quitar logo</button>
                             </div>
                             <div class="logo-preview">
                                 <span>Vista previa del logo</span>
