--- a/backup_web/index.html
+++ b/backup_web/index.html
@@ -1,6 +1,3 @@
-
-<!-- Pàgina pública -->
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -23,8 +20,12 @@
                     <!-- Navigation Links -->
                     <div class="nav-links">
                         <a id="inicio" href="index.html" class="nav-item">Inicio<span class="separator"></span></a>
-                        <a href="planes.html" class="nav-item">Planes</a>
-                        <button class="login-button" onclick="window.location.href='login.html'">Iniciar sesión</button>
+                        <a id="equipos" href="frontend/pages/equipos.html" class="nav-item">Equipos<span class="separator"></span></a>
+                        <a id="jugadores" href="frontend/pages/jugadores.html" class="nav-item">Jugadores<span class="separator"></span></a>
+                        <a id="arbitros" href="frontend/pages/arbitros.html" class="nav-item">Arbitros<span class="separator"></span></a>
+                        <a id="partidos" href="frontend/pages/partidos.html" class="nav-item">Partidos<span class="separator"></span></a>
+                        <a id="planes" href="frontend/pages/planes.html" class="nav-item">Planes</a>
+                        <button class="login-button" onclick="window.location.href='frontend/pages/login.html'">Iniciar sesión</button>
                     </div>
                 </div>
             </div>
@@ -47,6 +48,6 @@
             </div>
         </main>
     </div>
-    <script src="frontend/js/index.js"></script>
+    <script src="frontend/js/script.js"></script>
 </body>
 </html>
