--- a/backup_web/frontend/pages/ver-equipos.html
+++ b/backup_web/frontend/pages/ver-equipos.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista de Árbitros - RefereeZY</title>
-    <link rel="stylesheet" href="../style/arbitros.css">
-    <link rel="stylesheet" href="../style/ver-arbitros.css">
+    <title>Lista de Equipos - RefereeZY</title>
+    <link rel="stylesheet" href="../style/equipos.css">
+    <link rel="stylesheet" href="../style/ver-equipos.css">
 </head>
 <body>
     <div class="min-h-screen">
@@ -33,36 +33,23 @@
         </nav>
 
         <!-- Main Content -->
-        <main class="referees-section">
+        <main class="teams-section">
             <div class="container">
-                <div class="referees-card">
+                <div class="teams-card">
                     <!-- Título con diseño angular -->
                     <div class="title-container">
                         <div class="title-background"></div>
-                        <h1>Lista de Arbitros</h1>
+                        <h1>Lista de Equipos</h1>
                     </div>
 
                     <!-- Contenido dinámico -->
-                    <div class="referees-content"></div>
+                    <div class="teams-content">
+                        <div class="teams-grid"></div>
+                    </div>
                 </div>
             </div>
         </main>
-
-        <!-- Modal para asignar partido -->
-        <div id="assignMatchModal" class="modal">
-            <div class="modal-content">
-                <h2>Asignar Partido</h2>
-                <p>Asignando partido para: <span id="selectedRefereeName"></span></p>
-                <select id="availableMatches" class="match-select">
-                    <option value="">Seleccione un partido</option>
-                </select>
-                <div class="modal-buttons">
-                    <button id="assignMatchBtn" class="primary-button">Asignar</button>
-                    <button id="closeModalBtn" class="secondary-button">Cancelar</button>
-                </div>
-            </div>
-        </div>
     </div>
-    <script src="../js/ver-arbitros.js"></script>
+    <script src="../js/ver-equipos.js"></script>
 </body>
 </html>
