--- a/refereezy-website/planes.html
+++ b/refereezy-website/planes.html
@@ -21,7 +21,7 @@
                     <div class="nav-links">
                         <a href="index.html" class="nav-item">Inicio<span class="separator"></span></a>
                         <a href="planes.html" class="nav-item">Planes</a>
-                        <button class="login-button">Iniciar sesion</button>
+                        <button class="login-button" onclick="window.location.href='login.html'">Iniciar sesión</button>
                     </div>
                 </div>
             </div>
