--- a/refereezy-website/frontend/pages/ver-arbitros.html
+++ b/refereezy-website/frontend/pages/ver-arbitros.html
@@ -63,6 +63,7 @@
             </div>
         </div>
     </div>
+    <script src="../js/commons.js"></script>
     <script src="../js/ver-arbitros.js"></script>
 </body>
 </html>
