--- a/refereezy-website/frontend/pages/ver-equipos.html
+++ b/refereezy-website/frontend/pages/ver-equipos.html
@@ -50,6 +50,7 @@
             </div>
         </main>
     </div>
+    <script src="../js/commons.js"></script>
     <script src="../js/ver-equipos.js"></script>
 </body>
 </html>
