--- a/refereezy-website/frontend/pages/ver-partidos.html
+++ b/refereezy-website/frontend/pages/ver-partidos.html
@@ -58,6 +58,7 @@
             </div>
         </main>
     </div>
+    <script src="../js/commons.js"></script>
     <script src="../js/ver-partidos.js"></script>
 </body>
 </html>
