--- a/refereezy-website/frontend/pages/login.html
+++ b/refereezy-website/frontend/pages/login.html
@@ -9,41 +9,7 @@
 <body>
     <div class="min-h-screen">
         <!-- Navigation -->
-        <nav class="nav-bar">
-            <div class="nav-container">
-                <div class="nav-content">
-                    <div class="logo-container">
-                        <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/imagen_2025-01-30_202931687-removebg-preview-w4t8ZB79AlGh5VocbZvtb2mOVMtpQi.png" alt="RefereeZY Logo" class="logo">
-                    </div>
-                    <div class="nav-links">
-                        <a href="../../index.html" class="nav-item">
-                            Inicio
-                            <span class="separator"></span>
-                        </a>
-                        <a href="equipos.html" class="nav-item">
-                            Equipos
-                            <span class="separator"></span>
-                        </a>
-                        <a href="jugadores.html" class="nav-item">
-                            Jugadores
-                            <span class="separator"></span>
-                        </a>
-                        <a href="arbitros.html" class="nav-item">
-                            Árbitros
-                            <span class="separator"></span>
-                        </a>
-                        <a href="partidos.html" class="nav-item">
-                            Partidos
-                            <span class="separator"></span>
-                        </a>
-                        <a href="planes.html" class="nav-item">
-                            Planes
-                        </a>
-                        <button class="login-button">Iniciar sesión</button>
-                    </div>
-                </div>
-            </div>
-        </nav>
+        <iframe src="nav.html" width="100%" height="500px"></iframe>
 
         <!-- Rest of the login form content remains the same -->
         <main class="login-section">
@@ -73,6 +39,7 @@
             </div>
         </main>
     </div>
+    <script src="../js/commons.js"></script>
     <script src="../js/login.js"></script>
 </body>
 </html>
