Modifed the dashboard styles a bit

--- a/refereezy-website/frontend/pages/arbitros.html
+++ b/refereezy-website/frontend/pages/arbitros.html
@@ -11,7 +11,7 @@
         <!-- Navigation -->
         <nav class="nav-bar">
             <div class="nav-container">
-                <div class="nav-content">                    
+                <div class="nav-content">
                     <!-- Navigation Links -->
                     <nav class="dashboard-nav">
                         <div class="nav-logo">Refereezy ⚽</div>
@@ -34,7 +34,7 @@
                 <div class="referees-card">
                     <div class="title-container">
                         <div class="title-background"></div>
-                        <h1>Gestion de Arbitros</h1>
+                        <h1>Gestión de Arbitros</h1>
                     </div>
 
                     <div class="form-container">
