--- a/refereezy-website/frontend/pages/equipos.html
+++ b/refereezy-website/frontend/pages/equipos.html
@@ -12,6 +12,7 @@
         <nav class="nav-bar">
             <div class="nav-container">
                 <div class="nav-content">
+                    <!-- Navigation Links -->
                     <nav class="dashboard-nav">
                         <div class="nav-logo">Refereezy ⚽</div>
                         <ul class="nav-links">
