--- a/refereezy-website/frontend/pages/partidos.html
+++ b/refereezy-website/frontend/pages/partidos.html
@@ -35,7 +35,7 @@
                     <!-- Título con diseño angular -->
                     <div class="title-container">
                         <div class="title-background"></div>
-                        <h1>Gestion de Partidos</h1>
+                        <h1>Gestión de Partidos</h1>
                     </div>
 
                     <!-- Formulario -->
