--- a/refereezy-website/index.html
+++ b/refereezy-website/index.html
@@ -22,8 +22,8 @@
                     
                     <!-- Navigation Links -->
                     <div class="nav-links">
-                        <a id="inicio" href="index.html" class="nav-item">Inicio<span class="separator"></span></a>
-                        <a href="planes.html" class="nav-item">Planes</a>
+                        <a id="inicio" href="index.html" class="nav-item">Inicio</a>
+                        <a href="./frontend/pages/planes.html" class="nav-item">Planes</a>
                         <button class="login-button" onclick="window.location.href='login.html'">Iniciar sesión</button>
                     </div>
                 </div>
