--- a/refereezy-website/dashboard.html
+++ b/refereezy-website/dashboard.html
@@ -10,17 +10,25 @@
   <link rel="stylesheet" href="frontend/style/dashboard.css" />
 </head>
 <body>
-  <nav class="dashboard-nav">
-    <div class="nav-logo">Refereezy ⚽</div>
-    <ul class="nav-links">
-      <li><a href="frontend/pages/equipos.html">Equipos</a></li>
-      <li><a href="frontend/pages/jugadores.html">Jugadores</a></li>
-      <li><a href="frontend/pages/arbitros.html">Árbitros</a></li>
-      <li><a href="frontend/pages/partidos.html">Partidos</a></li>
-      <li><a href="frontend/pages/planes.html">Planes</a></li>
-      <li><a href="#" onclick="logout()">Cerrar sesión</a></li>
-    </ul>
-  </nav>
+  <!-- Navigation -->
+  <nav class="nav-bar">
+    <div class="nav-container">
+        <div class="nav-content">
+            <!-- Navigation Links -->
+            <nav class="dashboard-nav">
+                <div class="nav-logo">Refereezy ⚽</div>
+                <ul class="nav-links">
+                  <li><a href="./frontend/pages/equipos.html">Equipos</a></li>
+                  <li><a href="./frontend/pages/jugadores.html">Jugadores</a></li>
+                  <li><a href="./frontend/pages/arbitros.html">Árbitros</a></li>
+                  <li><a href="./frontend/pages/partidos.html">Partidos</a></li>
+                  <li><a href="./frontend/pages/planes.html">Planes</a></li>
+                  <li><a href="#" onclick="logout()">Cerrar sesión</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+</nav>
 
   <main class="dashboard-main">
     <h1>👋 Bienvenido a tu Panel de Control</h1>
