--- a/refereezy-website/frontend/pages/nav.html
+++ b/refereezy-website/frontend/pages/nav.html
@@ -1,18 +1,19 @@
+<!-- Navigation -->
 <nav class="nav-bar">
     <div class="nav-container">
         <div class="nav-content">
-            <div class="logo-container">
-                <img src="../assets/logo.png" alt="RefereeZY" class="logo">
-            </div>
-            <div class="nav-links">
-                <a href="../../index.html" class="nav-item">Inicio<span class="separator"></span></a>
-                <a href="equipos.html" class="nav-item">Equipos<span class="separator"></span></a>
-                <a href="jugadores.html" class="nav-item">Jugadores<span class="separator"></span></a>
-                <a href="arbitros.html" class="nav-item">Árbitros<span class="separator"></span></a>
-                <a href="partidos.html" class="nav-item">Partidos<span class="separator"></span></a>
-                <a href="planes.html" class="nav-item">Planes</a>
-            </div>
-            <button class="login-button">Iniciar sesión</button>
+            <!-- Navigation Links -->
+            <nav class="dashboard-nav">
+                <div class="nav-logo">Refereezy ⚽</div>
+                <ul class="nav-links">
+                  <li><a href="./equipos.html">Equipos</a></li>
+                  <li><a href="./jugadores.html">Jugadores</a></li>
+                  <li><a href="./arbitros.html">Árbitros</a></li>
+                  <li><a href="./partidos.html">Partidos</a></li>
+                  <li><a href="./planes.html">Planes</a></li>
+                  <li><a href="#" onclick="logout()">Cerrar sesión</a></li>
+                </ul>
+            </nav>
         </div>
     </div>
 </nav>
