--- a/refereezy-website/frontend/pages/planes.html
+++ b/refereezy-website/frontend/pages/planes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Planes - RefereeZY</title>
-    <link rel="stylesheet" href="frontend/style/planes.css">
+    <link rel="stylesheet" href="../style/planes.css">
 </head>
 <body>
     <div class="min-h-screen">
@@ -19,9 +19,9 @@
                     
                     <!-- Navigation Links -->
                     <div class="nav-links">
-                        <a href="index.html" class="nav-item">Inicio<span class="separator"></span></a>
+                        <a href="../../index.html" class="nav-item">Inicio</a>
                         <a href="planes.html" class="nav-item">Planes</a>
-                        <button class="login-button" onclick="window.location.href='login.html'">Iniciar sesión</button>
+                        <button class="login-button" onclick="window.location.href='../../login.html'">Account</button>
                     </div>
                 </div>
             </div>
