--- a/refereezy-website/login.html
+++ b/refereezy-website/login.html
@@ -19,8 +19,8 @@
                         <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/imagen_2025-01-30_202931687-removebg-preview-w4t8ZB79AlGh5VocbZvtb2mOVMtpQi.png" alt="RefereeZY Logo" class="logo">
                     </div>
                     <div class="nav-links">
-                        <a href="index.html" class="nav-item">Inicio<span class="separator"></span></a>
-                        <a href="planes.html" class="nav-item">Planes</a>
+                        <a href="index.html" class="nav-item">Inicio</a>
+                        <a href="./frontend/pages/planes.html" class="nav-item">Planes</a>
                         <button class="login-button">Iniciar sesión</button>
                     </div>
                 </div>
